--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
