--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "js-cookie": "^3.0.5",
     "jsvectormap": "^1.5.3",
     "next": "14.1.0",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-quill": "^2.0.0",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
