--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apexcharts": "^3.45.2",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "flatpickr": "^4.6.13",
     "js-cookie": "^3.0.5",
     "jsvectormap": "^1.5.3",
