--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flatpickr": "^4.6.13",
     "js-cookie": "^3.0.5",
     "jsvectormap": "^1.5.3",
+    "jwt-decode": "^4.0.0",
     "next": "14.1.0",
     "quill": "^2.0.2",
     "react": "^18",
