--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "react-quill": "^2.0.0",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
