--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-multi-select-component": "^4.3.4",
     "react-quill": "^2.0.0",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5"
